<resources>
<!--    <string name="app_name">b3synchronoss</string>-->
<!--    <string name="Greet">Happy Birthday varshitha!!!</string>-->
<!--    <string name="From">From God</string>-->
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="secondary_color">Secondary color</string>
    <string name="primary_color">Primary color</string>
    <string name="email_icon">email icon</string>
    <string name="service">How was the service</string>
</resources>